...
                android:layout_alignParentStart="true"
                android:layout_marginTop="61dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/grey_text_input_background"
                    android:hint="@string/donation_amount"
                    android:textAlignment="center" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/payPalButtonContainer"
                android:gravity="bottom"
                android:layout_marginTop="100dp"
                android:layout_below="@id/amountWrapper"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:layout_width="wrap_content"
...
