...
            android:text="@string/id"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp"
...
