...
    <string name="home_button_label_form">Upload Information w/out picture</string>
    <string name="home_button_label_gallery">Upload Picture from Gallery</string>

    <string name="channel_name">First Notification</string>
    <string name="channel_description">Notification for X</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_menu_item_home">Home</string>
    <string name="drawer_menu_item_howto">How To</string>
...
    <string name="help_spot_a_bee_by_making_a_donation_to_support_our_research">Help Spot a Bee by making a donation to support our research</string>
    <string name="test_donation">You have donated $17 to Spot A Bee</string>
    <string name="tips_for_taking_photos">Tips for taking photos</string>
    <string name="image_a">Image A</string>
    <string name="image_b">Image B</string>
    <string name="go_home">Go Home</string>
    <string name="internet_unavailable">Internet connection unavailable.</string>
    <string name="obscene_number_message">That is an obscene number of bees to be spotted on one bunch of flowers! Please enter a number less than pr equal to 50.</string>

</resources>

