...
            android:layout_below="@+id/locationField"
            android:layout_marginTop="50dp">
        </Spinner>
    </FrameLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/flowerField"
        android:layout_width="@dimen/field_width"
        android:layout_below="@+id/location_n_search"
        android:maxLines="1"
        android:hint="@string/flower_type"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content" />
...
