...
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />


                <ImageView
                    android:id="@+id/button_image_upload"
                    android:layout_width="75dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/ic_gallery"
...
